fix(quites): fix padding/margin and whitespace in html

--- a/app/client/stylesheets/components/pu-highlight.sass
+++ b/app/client/stylesheets/components/pu-highlight.sass
@@ -34,8 +34,8 @@
         padding: 5px 10px;
 
     > ul
-        margin-top: 30px
-        margin-bottom: 20px
+        margin-top: 20px
+        margin-bottom: 16px
 
     &-subtle
         h1
