--- a/app/client/stylesheets/components/pu-quotes.sass
+++ b/app/client/stylesheets/components/pu-quotes.sass
@@ -28,7 +28,7 @@
                 margin-right: 10px
 
     @media screen and (min-width: $breakpoint-tablet)
-        padding: 54px 45px 0px 45px
+        padding: 34px 45px 0px 45px
 
         .pu-commentbox
             width: 100%
